@@ -42,7 +42,7 @@ name|java
 operator|.
 name|util
 operator|.
-name|Set
+name|Map
 import|;
 end_import
 
@@ -421,9 +421,11 @@ parameter_list|,
 name|int
 name|maxNumSegments
 parameter_list|,
-name|Set
+name|Map
 argument_list|<
 name|SegmentInfo
+argument_list|,
+name|Boolean
 argument_list|>
 name|segmentsToOptimize
 parameter_list|)
@@ -487,7 +489,7 @@ if|if
 condition|(
 name|segmentsToOptimize
 operator|.
-name|contains
+name|containsKey
 argument_list|(
 name|info
 argument_list|)
