@@ -651,16 +651,20 @@ name|deleter
 decl_stmt|;
 DECL|field|segmentsToOptimize
 specifier|private
-name|Set
+name|Map
 argument_list|<
 name|SegmentInfo
+argument_list|,
+name|Boolean
 argument_list|>
 name|segmentsToOptimize
 init|=
 operator|new
-name|HashSet
+name|HashMap
 argument_list|<
 name|SegmentInfo
+argument_list|,
+name|Boolean
 argument_list|>
 argument_list|()
 decl_stmt|;
@@ -4279,16 +4283,26 @@ operator|.
 name|clear
 argument_list|()
 expr_stmt|;
+for|for
+control|(
+name|SegmentInfo
+name|info
+range|:
+name|segmentInfos
+control|)
+block|{
 name|segmentsToOptimize
 operator|.
-name|addAll
+name|put
 argument_list|(
-name|segmentInfos
+name|info
+argument_list|,
+name|Boolean
 operator|.
-name|asSet
-argument_list|()
+name|TRUE
 argument_list|)
 expr_stmt|;
+block|}
 name|optimizeMaxNumSegments
 operator|=
 name|maxNumSegments
@@ -4982,7 +4996,7 @@ name|maxNumSegmentsOptimize
 argument_list|,
 name|Collections
 operator|.
-name|unmodifiableSet
+name|unmodifiableMap
 argument_list|(
 name|segmentsToOptimize
 argument_list|)
@@ -8943,11 +8957,15 @@ block|{
 comment|// cascade the optimize:
 name|segmentsToOptimize
 operator|.
-name|add
+name|put
 argument_list|(
 name|merge
 operator|.
 name|info
+argument_list|,
+name|Boolean
+operator|.
+name|FALSE
 argument_list|)
 expr_stmt|;
 block|}
@@ -9093,7 +9111,6 @@ block|}
 comment|/**    * Merges the indicated segments, replacing them in the stack with a    * single segment.    *     * @lucene.experimental    */
 DECL|method|merge
 specifier|public
-specifier|final
 name|void
 name|merge
 parameter_list|(
@@ -9470,7 +9487,7 @@ if|if
 condition|(
 name|segmentsToOptimize
 operator|.
-name|contains
+name|containsKey
 argument_list|(
 name|info
 argument_list|)
