@@ -62,7 +62,7 @@ name|java
 operator|.
 name|util
 operator|.
-name|Set
+name|Map
 import|;
 end_import
 
@@ -658,9 +658,11 @@ parameter_list|,
 name|int
 name|maxNumSegments
 parameter_list|,
-name|Set
+name|Map
 argument_list|<
 name|SegmentInfo
+argument_list|,
+name|Boolean
 argument_list|>
 name|segmentsToOptimize
 parameter_list|)
@@ -685,6 +687,11 @@ name|SegmentInfo
 name|optimizeInfo
 init|=
 literal|null
+decl_stmt|;
+name|boolean
+name|segmentIsOriginal
+init|=
+literal|false
 decl_stmt|;
 for|for
 control|(
@@ -716,16 +723,28 @@ argument_list|(
 name|i
 argument_list|)
 decl_stmt|;
-if|if
-condition|(
+specifier|final
+name|Boolean
+name|isOriginal
+init|=
 name|segmentsToOptimize
 operator|.
-name|contains
+name|get
 argument_list|(
 name|info
 argument_list|)
+decl_stmt|;
+if|if
+condition|(
+name|isOriginal
+operator|!=
+literal|null
 condition|)
 block|{
+name|segmentIsOriginal
+operator|=
+name|isOriginal
+expr_stmt|;
 name|numToOptimize
 operator|++
 expr_stmt|;
@@ -744,6 +763,9 @@ operator|(
 name|numToOptimize
 operator|!=
 literal|1
+operator|||
+operator|!
+name|segmentIsOriginal
 operator|||
 name|isOptimized
 argument_list|(
@@ -1400,9 +1422,11 @@ parameter_list|,
 name|int
 name|maxNumSegments
 parameter_list|,
-name|Set
+name|Map
 argument_list|<
 name|SegmentInfo
+argument_list|,
+name|Boolean
 argument_list|>
 name|segmentsToOptimize
 parameter_list|)
@@ -1496,10 +1520,12 @@ if|if
 condition|(
 name|segmentsToOptimize
 operator|.
-name|contains
+name|get
 argument_list|(
 name|info
 argument_list|)
+operator|!=
+literal|null
 condition|)
 block|{
 name|last
