@@ -32,7 +32,7 @@ name|java
 operator|.
 name|util
 operator|.
-name|Set
+name|Map
 import|;
 end_import
 
@@ -139,9 +139,11 @@ parameter_list|,
 name|int
 name|maxSegmentCount
 parameter_list|,
-name|Set
+name|Map
 argument_list|<
 name|SegmentInfo
+argument_list|,
+name|Boolean
 argument_list|>
 name|segmentsToOptimize
 parameter_list|)
