@@ -32,7 +32,7 @@ name|java
 operator|.
 name|util
 operator|.
-name|Set
+name|Map
 import|;
 end_import
 
@@ -1917,9 +1917,11 @@ parameter_list|,
 name|int
 name|maxSegmentCount
 parameter_list|,
-name|Set
+name|Map
 argument_list|<
 name|SegmentInfo
+argument_list|,
+name|Boolean
 argument_list|>
 name|segmentsToOptimize
 parameter_list|)
@@ -1989,6 +1991,11 @@ operator|.
 name|getMergingSegments
 argument_list|()
 decl_stmt|;
+name|boolean
+name|segmentIsOriginal
+init|=
+literal|false
+decl_stmt|;
 for|for
 control|(
 name|SegmentInfo
@@ -1997,16 +2004,28 @@ range|:
 name|infos
 control|)
 block|{
-if|if
-condition|(
+specifier|final
+name|Boolean
+name|isOriginal
+init|=
 name|segmentsToOptimize
 operator|.
-name|contains
+name|get
 argument_list|(
 name|info
 argument_list|)
+decl_stmt|;
+if|if
+condition|(
+name|isOriginal
+operator|!=
+literal|null
 condition|)
 block|{
+name|segmentIsOriginal
+operator|=
+name|isOriginal
+expr_stmt|;
 if|if
 condition|(
 operator|!
@@ -2076,6 +2095,10 @@ argument_list|()
 operator|==
 literal|1
 operator|&&
+operator|(
+operator|!
+name|segmentIsOriginal
+operator|||
 name|isOptimized
 argument_list|(
 name|eligible
@@ -2085,6 +2108,7 @@ argument_list|(
 literal|0
 argument_list|)
 argument_list|)
+operator|)
 operator|)
 condition|)
 block|{
