@@ -56,16 +56,6 @@ name|java
 operator|.
 name|util
 operator|.
-name|HashSet
-import|;
-end_import
-
-begin_import
-import|import
-name|java
-operator|.
-name|util
-operator|.
 name|List
 import|;
 end_import
@@ -76,7 +66,17 @@ name|java
 operator|.
 name|util
 operator|.
-name|Set
+name|Map
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
+name|HashMap
 import|;
 end_import
 
@@ -202,9 +202,11 @@ parameter_list|,
 name|int
 name|maxSegmentCount
 parameter_list|,
-name|Set
+name|Map
 argument_list|<
 name|SegmentInfo
+argument_list|,
+name|Boolean
 argument_list|>
 name|segmentsToOptimize
 parameter_list|)
@@ -215,16 +217,20 @@ name|IOException
 block|{
 comment|// first find all old segments
 specifier|final
-name|HashSet
+name|Map
 argument_list|<
 name|SegmentInfo
+argument_list|,
+name|Boolean
 argument_list|>
 name|oldSegments
 init|=
 operator|new
-name|HashSet
+name|HashMap
 argument_list|<
 name|SegmentInfo
+argument_list|,
+name|Boolean
 argument_list|>
 argument_list|()
 decl_stmt|;
@@ -237,14 +243,22 @@ range|:
 name|segmentInfos
 control|)
 block|{
-if|if
-condition|(
+specifier|final
+name|Boolean
+name|v
+init|=
 name|segmentsToOptimize
 operator|.
-name|contains
+name|get
 argument_list|(
 name|si
 argument_list|)
+decl_stmt|;
+if|if
+condition|(
+name|v
+operator|!=
+literal|null
 operator|&&
 name|shouldUpgradeSegment
 argument_list|(
@@ -254,9 +268,11 @@ condition|)
 block|{
 name|oldSegments
 operator|.
-name|add
+name|put
 argument_list|(
 name|si
+argument_list|,
+name|v
 argument_list|)
 expr_stmt|;
 block|}
@@ -318,15 +334,24 @@ operator|.
 name|merges
 control|)
 block|{
-name|oldSegments
-operator|.
-name|removeAll
-argument_list|(
+for|for
+control|(
+name|SegmentInfo
+name|info
+range|:
 name|om
 operator|.
 name|segments
+control|)
+block|{
+name|oldSegments
+operator|.
+name|remove
+argument_list|(
+name|info
 argument_list|)
 expr_stmt|;
+block|}
 block|}
 block|}
 if|if
@@ -387,7 +412,7 @@ if|if
 condition|(
 name|oldSegments
 operator|.
-name|contains
+name|containsKey
 argument_list|(
 name|si
 argument_list|)
